<resources>
    <string name="app_name">GoStyle</string>
    <string name="login">SE CONNTECTER</string>
    <string name="inscription">S\'INSCRIRE</string>
    <string name="deco">SE DECONNECTER</string>
    <string name="description">Bienvenue sur l\'application</string>
    <string name="userName">Entrez le nom d\'utilisateur</string>
    <string name="password">Entrez le mot de passe</string>
    <string name="form_connexion">Formulaire de connexion</string>
    <string name="form_connexion_Regi">Veuillez saisir vos informations</string>
    <string name="form_nom">Votre Nom</string>
    <string name="form_prenom">Votre Prénom</string>
    <string name="form_masc">Masculin</string>
    <string name="form_femin">Féminin</string>
    <string name="form_other">Autre</string>
    <string name="form_birthday">Date d\'anniversaire</string>
    <string name="form_email">E-mail</string>
    <string name="form_adress">Entrez le nom de votre rue</string>
    <string name="form_cp">Code Postale</string>
    <string name="form_ville">Ville</string>
    <string name="form_password">Choisir un mot de passe</string>
    <string name="form_passord2">Confirmation du mot de passe</string>
    <string name="welcome">Bienvenue {{user.name}}</string>
    <string name="qrcode">Scanner un QRCode</string>
    <string name="back">Retour</string>
    <string name="logo_description">Logo de l\'application</string>
    <string name="category">Catégorie :</string>
    <string name="codeAdvantage">Code :</string>
</resources>