<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <androidx.appcompat.widget.Toolbar
            android:id="@+id/toolbar"
            android:layout_width="match_parent"
            android:layout_height="?attr/actionBarSize"
            android:background="@color/purple_700"
            android:elevation="4dp"
            android:theme="?attr/actionBarTheme"
            app:layout_constraintTop_toTopOf="parent">

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent">
                <TextView
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintEnd_toStartOf="@+id/btnMainLogin"
                    android:text="@string/app_name"
                    android:gravity="center_vertical"
                    android:textSize="30sp"
                    android:textStyle="bold"/>
                <Button
                    android:id="@+id/btnMainLogin"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/login"
                    android:textSize="12sp"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toStartOf="@+id/btnMainInscription"
                    app:layout_constraintTop_toTopOf="parent"/>

                <Button
                    android:id="@+id/btnMainInscription"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/inscription"
                    android:textSize="12sp"
                    android:layout_marginEnd="3dp"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>

                <TextView
                    android:id="@+id/tvMainMessage"
                    android:layout_width="0dp"
                    android:layout_height="match_parent"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toStartOf="@+id/btnMainDeconnecter"
                    app:layout_constraintTop_toTopOf="parent" />

                <Button
                    android:id="@+id/btnMainDeconnecter"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/deco"
                    android:textSize="12sp"
                    android:layout_marginEnd="3dp"
                    android:visibility="invisible"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintTop_toTopOf="parent"/>
            </androidx.constraintlayout.widget.ConstraintLayout>
        </androidx.appcompat.widget.Toolbar>

    <LinearLayout
        android:id="@+id/Ll_Info_App"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:orientation="horizontal"
        app:layout_constraintTop_toBottomOf="@+id/toolbar">

        <ImageView
            android:id="@+id/imageViewMainLogo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_margin="10dp"
            tools:srcCompat="@mipmap/logo"
            android:contentDescription="@string/logo_description" />

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="0dp"
                android:layout_margin="5dp"
                android:text="@string/description"
                app:layout_constraintTop_toTopOf="parent"
                app:layout_constraintBottom_toTopOf="@+id/btnMainQrCode"/>

            <Button
                android:id="@+id/btnMainQrCode"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/qrcode"
                app:layout_constraintBottom_toBottomOf="parent"/>
        </androidx.constraintlayout.widget.ConstraintLayout>
    </LinearLayout>

    <androidx.recyclerview.widget.RecyclerView
        android:id="@+id/rvMainListPromo"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_marginLeft="7dp"
        android:layout_marginRight="7dp"
        android:layout_marginTop="11dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/Ll_Info_App"
        app:layout_constraintVertical_bias="0.0" />
</androidx.constraintlayout.widget.ConstraintLayout>